--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.caretom"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -28,7 +28,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.mcxiaoke.volley:library:1.0.17'// library for webservices implementation
+    compile 'com.google.firebase:firebase-messaging:9.2.0'
 
+    compile 'com.mcxiaoke.volley:library:1.0.17'// library for webservices implementation
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.21.1'
+    compile 'com.google.android.gms:play-services-location:9.2.0'// google api for location
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
