--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,21 @@
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +29,31 @@
         </activity>
         <activity android:name=".beforeLoginModule.MenuScreen"></activity>
         <activity android:name=".beforeLoginModule.ServicesMainScreen"></activity>
-
         <activity android:name=".beforeLoginModule.MainMenuScreen"></activity>
         <activity android:name=".beforeLoginModule.PackageDetailActivity"></activity>
+        <activity android:name=".Signup.DoctorSignupActivity"></activity>
+        <activity android:name=".doctor.DoctorDashBoardScreen"></activity>
+        <activity android:name=".customer.CustomerDashboardScreen"></activity>
+        <activity android:name=".Signup.UserTypeSelectionScreen"></activity>
+        <activity android:name=".beforeLoginModule.BlogDetailActivity"></activity>
+
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="com.facebook.app.FacebookContentProvider116621532224239"
+            android:exported="true" />
+
+        <service android:name=".firebasePush.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".firebasePush.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
